--- a/app/src/main/res/layout/activity_sendinfo.xml
+++ b/app/src/main/res/layout/activity_sendinfo.xml
@@ -31,6 +31,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit and continue"/>
+        android:text="Submit and continue"
+        android:onClick = "toWait"/>
 
 </LinearLayout>
