--- a/app/src/main/res/layout/activity_sendinfo.xml
+++ b/app/src/main/res/layout/activity_sendinfo.xml
@@ -8,33 +8,39 @@
         android:layout_height="wrap_content" />
 
     <EditText
+        android:id="@+id/complaint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/chief_complaint_prompt"
-        android:id = "@+id/complaint" />
+        android:hint="@string/chief_complaint_prompt"/>
 
     <TextView android:text="@string/location" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <EditText
+        android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/location_prompt"
-        android:id="@+id/location"/>
+        android:hint="@string/location_prompt"/>
 
     <TextView android:text="@string/additional_info" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <EditText
+        android:id="@+id/details"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/additional_info_prompt"
-        android:id="@+id/details" />
+        android:hint="@string/additional_info_prompt"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Submit and continue"
-        android:onClick = "toWait"/>
+        android:onClick= "toWait"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancel"
+        android:onClick= "toMain"/>
 
 </LinearLayout>
