--- a/app/src/main/res/layout/activity_wait.xml
+++ b/app/src/main/res/layout/activity_wait.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:orientation = "vertical">
 
-    <TextView android:text="@string/wait_message" android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/request_status"
+        android:text="@string/wait_message" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"/>
 
