--- a/app/src/main/res/layout/activity_wait.xml
+++ b/app/src/main/res/layout/activity_wait.xml
@@ -6,7 +6,9 @@
         android:id="@+id/request_status"
         android:text="@string/wait_message" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:textSize="25dp"
+        android:gravity="center"
+        android:textColor="#000000" />
 
     <Button
         android:layout_width="match_parent"
